# create-rag-app

./: README.md  pyproject.toml
src/create_rag_app/: cli.py  models.py  prompts.py  scaffolder.py  templates.py
tests/: test_init.py
